--- a/ProjecIntegration.Api/Blazor.UI/Client/manager/Manager.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/manager/Manager.razor
@@ -1,5 +1,6 @@
 ﻿@page "/manager"
-
+@attribute [Authorize]
+@attribute [StreamRendering]
 @using Blazor.UI.Client.Page.Comp
 @using Blazor.UI.Client.Page.sallePage
 @using Blazor.UI.Client.Page
